# data-addition-dilemma

./: README.md  environment.yml  pyproject.toml  setup.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/prediction_models/: CatBoostClassifier.gin  K29.gin  LogisticRegressionRBF.gin  MondrianForest.gin
data-addition-scripts/mortality24/: all_data-K29.sh  all_data-Mondrian.sh  base-CatBoost.sh  base-K29.sh  base-Mondrian.sh  base-RBFLR.sh  debug-k29.sh  debug.sh  dist_shift.sh  tune-K29.sh
defensive_forecasting/: __init__.py  catboost.ipynb  example_usage.py  k29.ipynb  k29_algorithm.py  mondrian_forest.py  notebook.ipynb  test_k29.py  test_specific_data.py
experiments/: benchmark_classification.yml  demo_benchmark_classification.yml
fairness/: 1_data_analysis.ipynb  2_subgroup_score.ipynb
icu_benchmarks/: cross_validation.py  run.py  run_utils.py  wandb_utils.py
icu_benchmarks/data/: preprocessor.py  split_process_data.py
icu_benchmarks/models/: constants.py  kernels.py  ml_models.py  train.py  utils.py  wrappers.py
icu_benchmarks/tuning/: hyperparameters.py
results/add_data/: LGBMClassifier-n1000-avg.npz  LGBMClassifier-n1000-ci.npz  LGBMClassifier-n1000-std.npz  LSTM-n1000-avg.npz  LSTM-n1000-ci.npz  LSTM-n1000-std.npz  LogisticRegression-n1000-avg.npz  LogisticRegression-n1000-ci.npz  LogisticRegression-n1000-std.npz  LogisticRegression-n1500-avg.npz  LogisticRegression-n1500-ci.npz  LogisticRegression-n1500-std.npz
(+76 files in other folders)
