[project]
name = "yaib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "coverage>=7.13.0",
    "gin-config>=0.5.0",
    "hydra-core>=1.3.2",
    "recipies==0.1.3",
    "lightgbm==3.3.5",
    "loguru>=0.7.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "pyarrow==11.0.0",
    "pytest>=9.0.2",
    "pytorch-lightning==2.0.3",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "tensorboard==2.12.2",
    "torch==2.0.1",
    "pytorch-ignite==0.4.11",
    "torchaudio==2.0.2",
    "torchmetrics==1.0.3",
    "torchvision==0.15.2",
    "tqdm>=4.67.1",
    "wandb==0.15.4",
    "catboost>=1.2.8",
    "ipykernel>=7.1.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.scripts]
icu-benchmarks = "icu_benchmarks.run:main"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118=explicit"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
